@@ -7,6 +7,8 @@ Features
 Bugfixes
 --------
 
+* Avoid infinite loop if bootstrap3 can't be loaded (Issue #2402)
+
 New in v7.7.11
 ==============
 
